Optimisation du NDTree

--- a/Code/ND_Tree_test.ipynb
+++ b/Code/ND_Tree_test.ipynb
@@ -14,6 +14,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7f61758",
+   "metadata": {},
+   "source": [
+    "## Test ND_Tree"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "20a0fdba",
@@ -140,7 +148,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "3fd62523",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -245,12 +255,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8e148be",
+   "metadata": {},
+   "source": [
+    "## Test PLS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa9c3ac8",
+   "id": "e6e6f372",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def PLS(m, params, NBMAX= 20, verbose=False):\n",
+    "\tpopulation = init(m,params)\n",
+    "\tXe = NDTree(NBMAX=NBMAX)\n",
+    "\tfor e in population: Xe.update(e)\n",
+    "\tPa = NDTree(NBMAX=NBMAX)\n",
+    "\n",
+    "\titeration = 1\n",
+    "\twhile population:\n",
+    "\t\tif verbose: print(f'{iteration = } | population size: {len(population)}')\n",
+    "\t\tfor p in population:\n",
+    "\t\t\tfor candidat in voisinage(p, params):\n",
+    "\t\t\t\tif np.all(p[1] >= candidat[1]): continue\n",
+    "\t\t\t\tif Xe.update(candidat): Pa.update(candidat)\n",
+    "\t\tpopulation = Pa.getPoints()\n",
+    "\t\tPa.reset()\n",
+    "\t\tYND = Xe.getPoints()\n",
+    "\t\tYND = np.array([p[1] for p in YND])\n",
+    "\t\tplt.scatter(*YND.T)\n",
+    "\t\tplt.xlim(xmin = 7e4, xmax=9e4)\n",
+    "\t\tplt.ylim(ymin = 6e4, ymax=8e4)\n",
+    "\t\tplt.show()\n",
+    "\t\titeration += 1\n",
+    "\treturn Xe.getPoints()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1b77a28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Phase 1\n",
+    "numInstance=1\n",
+    "n= 200\n",
+    "p = 2\n",
+    "w=np.zeros(n,dtype=int) # poids des objets\n",
+    "v=np.zeros((n,p),dtype=int) # utilités des objets\n",
+    "filename = f\"./data/2KP{n}-TA-{numInstance}.dat\"\n",
+    "\n",
+    "print(v.shape)\n",
+    "\n",
+    "# W: budget\n",
+    "W=readFile(filename,w,v)\n",
+    "\n",
+    "params = (n,p,v,w,W)\n",
+    "m = 1\n",
+    "verbose = True\n",
+    "NBMAX = 20\n",
+    "\n",
+    "PLS(\n",
+    "    m,\n",
+    "    params,\n",
+    "    NBMAX,\n",
+    "    verbose= True\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
