update and small optimization

--- a/Code/experience.ipynb
+++ b/Code/experience.ipynb
@@ -131,7 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "array([20260, 19926, 18312])"
+       "array([19575, 19460, 18622])"
       ]
      },
      "execution_count": 3,
@@ -153,10 +153,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8d1130e7",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -174,8 +174,40 @@
       "[20663 18524 18138] [21989 17434 14928]\n",
       "iteration = 3 | regret = 0.16\n",
       "[19736 18878 18717] [20929 19710 17630]\n",
-      "iteration = 4 | regret = 0.10\n",
-      "[20929 19710 17630] [18411 20722 17940]\n"
+      "iteration = 4 | regret = 0.09\n",
+      "[19326 18843 19077] [18411 20722 17940]\n",
+      "iteration = 5 | regret = 0.07\n",
+      "[19326 18843 19077] [18290 17341 19459]\n",
+      "iteration = 6 | regret = 0.06\n",
+      "[19552 18934 18893] [19131 17957 19234]\n",
+      "iteration = 7 | regret = 0.06\n",
+      "[19552 18934 18893] [20260 19926 18312]\n",
+      "iteration = 8 | regret = 0.04\n",
+      "[19552 18934 18893] [20544 18165 18500]\n",
+      "iteration = 9 | regret = 0.04\n",
+      "[19552 18934 18893] [17771 19908 18626]\n",
+      "iteration = 10 | regret = 0.04\n",
+      "[19552 18934 18893] [18804 20057 18535]\n",
+      "iteration = 11 | regret = 0.03\n",
+      "[19552 18934 18893] [19376 18691 19154]\n",
+      "iteration = 12 | regret = 0.01\n",
+      "[19552 18934 18893] [20479 18580 18314]\n",
+      "iteration = 13 | regret = 0.01\n",
+      "[19552 18934 18893] [19326 18843 19077]\n",
+      "iteration = 14 | regret = 0.01\n",
+      "[19552 18934 18893] [18814 19454 18791]\n",
+      "iteration = 15 | regret = 0.01\n",
+      "[19552 18934 18893] [18167 19020 18913]\n",
+      "iteration = 16 | regret = 0.01\n",
+      "[19552 18934 18893] [18895 18962 18921]\n",
+      "iteration = 17 | regret = 0.00\n",
+      "[19552 18934 18893] [19120 19294 18777]\n",
+      "iteration = 18 | regret = 0.00\n",
+      "[19552 18934 18893] [19575 19460 18622]\n",
+      "iteration = 19 | regret = 0.00\n",
+      "[19575 19460 18622] [19502 19086 18816]\n",
+      "iteration = 20 | regret = 0.00\n",
+      "[19575 19460 18622] [18895 18962 18921]\n"
      ]
     }
    ],
@@ -194,8 +226,7 @@
     "    else: model.update(o2,o1)\n",
     "    o1, o2, regret = model.CSS(YND)\n",
     "    minmax_regrets.append(regret)\n",
-    "    print(f'{iteration = } | {regret =: .2f}')\n",
-    "    print(o1[1], o2[1])\n",
+    "    print(f'{iteration = } | {regret =: .2f} | {o1[1]} {o2[1]}')\n",
     "    iteration += 1"
    ]
   },
